--- a/index.html
+++ b/index.html
@@ -11,17 +11,26 @@
             transform: translate(-50%, -50%);
             background-color: white; /* Add a background color to the logo */
         }
+        #loading-text {
+            position: absolute;
+            top: 60%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
     <img id="logo" src="https://i.imgur.com/wsx7zdD.png" alt="logo">
+    <div id="loading-text">"Игра" загружается. Ожидайте.</div>
     <script src="index.js"></script>
     <script>
         var engine = new Engine({"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":2766944,"index.wasm":17867504},"focusCanvas":true,"gdnativeLibs":[]});
         engine.startGame();
         setTimeout(function() {
             document.getElementById("logo").style.display = "none";
+            document.getElementById("loading-text").style.display = "none";
         }, 5000);
     </script>
 </body>
