--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         #loading-text {
             position: absolute;
-            top: 60%;
+            top: calc(50% + 100px);
             left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
@@ -35,4 +35,3 @@
     </script>
 </body>
 </html>
-
